# CellAgentChat

./: .gitignore  Communication.py  LICENSE.txt  README.md  bckground_distribution.py  communication_pseudotime.py  model_setup.py  preprocessor.py  pyproject.toml  requirements.txt  setup.py  trajectory.py
docs/: animation.rst  conf.py  index.rst  inputs.rst  installation.rst  overview.rst  quickstart.rst  releases.rst  requirements.txt  tutorials.rst
release-notes/: v0.1.0.md
src/: Communication.py  Communication_new.py  abm.py  abm_new2.py  abm_pseudotime.py  bckground_distribution.py  bckground_distribution_new.py  communication_pseudotime.py  dotplot.R  heatmaps.R  model_setup.py  model_setup_new.py  output_paths.py  permutations.py  permutations_new.py  preprocessor.py  preprocessor_new.py
src/cellagentchat_data/: __init__.py  human_lr_pair.tsv  mouse_lr_pair.tsv
src/databases/: REACTOME_human.csv  REACTOME_mouse.csv  TF_TG_human.csv
src/hi/: Communication.py  abm_pseudotime.py  bckground_distribution.py  communication_pseudotime.py  heatmaps.R  model_setup.py  preprocessor.py
tutorial/: Individual Cell Interactions.html  Individual Cell Interactions.ipynb  Tutorial.html  Tutorial.ipynb  Tutorial_Pseudotime.html  Tutorial_Pseudotime.ipynb  Tutorial_receptor_blocking.html  Tutorial_with_imputation.ipynb  Tutorial_with_imputation_old.ipynb  Tutorial_with_spot_deconvolution.ipynb  meta.csv  pseudotime.csv  spatial_coordinates.csv  x_umap.csv
tutorial/hi/: Tutorial.html  Tutorial_Pseudotime.html  Tutorial_Pseudotime.ipynb  Tutorial_receptor_blocking.ipynb
(+1 files in other folders)
